fix: fix code-style