@@ -7,55 +7,55 @@ import java.util.function.Supplier;
 
 public class ValidationResult {
 
-  private final boolean valid;
-  private final List<ValidationError> errors;
+    private final boolean valid;
+    private final List<ValidationError> errors;
 
-  public ValidationResult(boolean valid, List<ValidationError> errors) {
-    this.valid = valid;
-    this.errors = Collections.unmodifiableList(errors);
-  }
-
-  public static ValidationResult valid() {
-    return new ValidationResult(true, Collections.emptyList());
-  }
-
-  public static ValidationResult error(String field, String message) {
-    return error(field, message, null);
-  }
-
-  public static ValidationResult error(String field, String message, String code) {
-    ValidationError error = new ValidationError(field, message, code);
-    return new ValidationResult(false, List.of(error));
-  }
-
-  public static ValidationResult errors(List<ValidationError> errors) {
-    return new ValidationResult(false, errors);
-  }
-
-  public ValidationResult thenCombine(Supplier<ValidationResult> otherSupplier) {
-    if (this.valid) {
-      return this.combine(otherSupplier.get());
+    public ValidationResult(boolean valid, List<ValidationError> errors) {
+        this.valid = valid;
+        this.errors = Collections.unmodifiableList(errors);
     }
 
-    return this;
-  }
-
-  public ValidationResult combine(ValidationResult other) {
-    if (this.valid && other.valid) {
-      return valid();
+    public static ValidationResult valid() {
+        return new ValidationResult(true, Collections.emptyList());
     }
 
-    List<ValidationError> mergedErrors = new ArrayList<>(this.errors);
-    mergedErrors.addAll(other.errors);
+    public static ValidationResult error(String field, String message) {
+        return error(field, message, null);
+    }
 
-    return errors(mergedErrors);
-  }
+    public static ValidationResult error(String field, String message, String code) {
+        ValidationError error = new ValidationError(field, message, code);
+        return new ValidationResult(false, List.of(error));
+    }
 
-  public boolean isValid() {
-    return valid;
-  }
+    public static ValidationResult errors(List<ValidationError> errors) {
+        return new ValidationResult(false, errors);
+    }
 
-  public List<ValidationError> getErrors() {
-    return errors;
-  }
+    public ValidationResult thenCombine(Supplier<ValidationResult> otherSupplier) {
+        if (this.valid) {
+            return this.combine(otherSupplier.get());
+        }
+
+        return this;
+    }
+
+    public ValidationResult combine(ValidationResult other) {
+        if (this.valid && other.valid) {
+            return valid();
+        }
+
+        List<ValidationError> mergedErrors = new ArrayList<>(this.errors);
+        mergedErrors.addAll(other.errors);
+
+        return errors(mergedErrors);
+    }
+
+    public boolean isValid() {
+        return valid;
+    }
+
+    public List<ValidationError> getErrors() {
+        return errors;
+    }
 }
